--- a/moviesstore/templates/base.html
+++ b/moviesstore/templates/base.html
@@ -7,12 +7,9 @@
       "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
       crossorigin="anonymous">
     <link rel=
-      "stylesheet"  href="https://cdnjs.cloudflare.com/
-      ajax/libs/font-awesome/6.1.1/css/all.min.css">
+      "stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link href=
-      "https://fonts.googleapis.com/
-      css2?family=Poppins:wght@300;400;500;600;700&display=
-      swap" rel="stylesheet">
+      "https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src=
       "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/
       js/bootstrap.bundle.min.js"crossorigin="anonymous">
@@ -49,10 +46,17 @@
               "{% url 'movies.index' %}">Movies</a>
             <div class="vr bg-white mx-2 d-none
               d-lg-block"></div>
+            {% if user.is_authenticated %}
+            <a class="nav-link"
+              href="{% url 'accounts.logout' %}">Logout ({{ user.username }})</a>
+            {% else %}
+            <a class="nav-link"
+              href="{% url 'accounts.login' %}">Login</a>
             <a class="nav-link"
               href="{% url 'accounts.signup' %}">
               Sign Up
             </a>
+            {% endif %}
           </div>
         </div>
       </div>
