--- a/movies/templates/movies/show.html
+++ b/movies/templates/movies/show.html
@@ -84,7 +84,7 @@
         {% endif %}
       </div>
       <div class="col-md-6 mx-auto mb-3 text-center">
-        <img src="{{ template_data.movie.image.url }}" class="rounded img-card-400" />
+        <img src="{{ movie.poster }}" class="card-img-top rounded img-card-200" alt="{{ movie.name }}">
       </div>
     </div>
   </div>
