--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+
 {% block content %}
 <div class="p-3 mt-4">
   <div class="container">
@@ -35,6 +36,10 @@
                 </button>
               </div>
             </form>
+            <!-- Password Reset -->
+            <div class="text-center mt-3">
+              <a href="{% url 'password_reset' %}">Forgot your password?</a>
+            </div>
           </div>
         </div>
       </div>
