--- a/movies/templates/movies/show.html
+++ b/movies/templates/movies/show.html
@@ -84,7 +84,7 @@
         {% endif %}
       </div>
       <div class="col-md-6 mx-auto mb-3 text-center">
-        <img src="{{ movie.image }}" class="card-img-top rounded img-card-200" alt="{{ movie.name }}">
+        <img src="{{ template_data.movie.image }}" class="card-img-top rounded img-card-400" alt="{{ template_data.movie.name }}">
       </div>
     </div>
   </div>
