--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -27,9 +27,7 @@
         </p>
       </div>
       <div class="col-md-6 mx-auto mb-3 text-center">
-        <img src="{% static 'img/about.jpg' %}"
-             class="max-width-100"
-             alt="about" />
+        <img src="{% static 'img/about.png' %}" style="width: 75%;" class="max-width-100">
       </div>
     </div>
   </div>
