Added Individual Remove Buttons For Cart
Created an additional column in the cart page. This column holds buttons to remove the corresponding movie.

--- a/cart/templates/cart/index.html
+++ b/cart/templates/cart/index.html
@@ -19,6 +19,7 @@
             <th scope="col">Name</th>
             <th scope="col">Price</th>
             <th scope="col">Quantity</th>
+            <th scope="col">Remove</th>
           </tr>
         </thead>
         <tbody>
@@ -27,7 +28,13 @@
             <td>{{ movie.id }}</td>
             <td>{{ movie.name }}</td>
             <td>${{ movie.price }}</td>
-            <td>{{request.session.cart|get_quantity:movie.id }}
+            <td>{{request.session.cart|get_quantity:movie.id }}</td>
+            <td>
+                <a href="{% url 'cart.remove' id=movie.id %}">
+                    <button class="btn btn-danger mb-2">
+                        Remove Movie From Cart
+                    </button>
+                </a>
             </td>
           </tr>
           {% endfor %}
