--- a/cart/templates/cart/index.html
+++ b/cart/templates/cart/index.html
@@ -27,7 +27,7 @@
           <tr>
             <td>{{ movie.id }}</td>
             <td>{{ movie.name }}</td>
-            <td>${{ movie.price }}</td>
+            <td>${{ movie.price|floatformat:2 }}</td>
             <td>{{request.session.cart|get_quantity:movie.id }}</td>
             <td>
                 <a href="{% url 'cart.remove' id=movie.id %}">
