--- a/moviesstore/templates/base.html
+++ b/moviesstore/templates/base.html
@@ -12,7 +12,7 @@
       "https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src=
       "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/
-      js/bootstrap.bundle.min.js"crossorigin="anonymous">
+      js/bootstrap.bundle.min.js" crossorigin="anonymous">
     </script>
     <link rel="stylesheet" type="text/css"
           href="{% static 'css/style.css' %}">
@@ -20,13 +20,14 @@
       initial-scale=1" />
   </head>
   <body>
+  <div class="page-container d-flex flex-column min-vh-100">
     <!-- Header -->
     <nav class="p-3 navbar navbar-dark bg-dark
          navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand"
            href="{% url 'home.index' %}">
-          <img src="{% static 'img/logo.png' %}" alt="logo"
+                <img src="{% static 'img/logo.png' %}" alt="logo"
                height="40" />
         </a>
         <button class="navbar-toggler" type="button"
@@ -66,7 +67,7 @@
       </div>
     </nav>
     <!-- Header -->
-    <div>
+    <div class="flex-grow-1">
       {% block content %}
       {% endblock content %}
     </div>
@@ -88,25 +89,25 @@
           </div>
           <div class="col-md-3 col-lg-3 col-xl-3
                mx-auto mb-4">
-            <b>LINKS</b>
-            <hr />
-            <p><a class="nav-link"
-              href="{% url 'home.about' %}">
-              About
-            </a></p>
+          <b>LINKS</b>
+          <hr />
+          <p><a class="nav-link" href="{% url 'home.about' %}">About</a></p>
+          <p><a class="nav-link" href="{% url 'movies.index' %}">Movies</a></p>
+          <p><a class="nav-link" href="{% url 'cart.index' %}">Cart</a></p>
+          <p><a class="nav-link" href="{% url 'accounts.orders' %}">Orders</a></p>
           </div>
           <div class="col-md-3 col-lg-3 col-xl-3 mx-auto
                mb-4">
             <b>CONTACT</b>
             <hr />
             <p><i class="fas fa-home me-2"></i>
-              150-2345 Tokyo-to, Japan
+              Atlanta, GA 30332
             </p>
             <p><i class="fas fa-envelope me-2"></i>
-              info@moviesstore.com
+              odproject2340@gmail.com
             </p>
             <p><i class="fas fa-phone me-2"></i>
-              +81 03-3333-3333
+              +1 (404) 894-2000
             </p>
           </div>
         </div>
@@ -116,18 +117,25 @@
       <div class="container d-flex
            justify-content-between">
         <div class="me-5 text-white">
-          <span>DESIGNED BY
+          <span>DESIGNED BY <!-- Alphabetical order -->
+            <a href="https://www.instagram.com/jhm21390/"
+            target="_blank">Hyomin Jin</a>,
+            <a href="https://www.linkedin.com/in/jenny-huynh-5ab5b9253/"
+            target="_blank">Jenny Huynh</a>,
             <a href="https://www.x.com/danielgarax"
-            target="_blank">DANIEL CORREA</a> &
+            target="_blank">Jingxuan Liu</a>,
+            <a href="https://www.facebook.com/shi.jin.16144"
+            target="_blank">Shi Jin</a> &
             <a href="https://www.x.com/greglim81"
-            target="_blank">GREG LIM</a>
+            target="_blank">Tucker Mead Albaugh</a>
           </span>
         </div>
         <div class="text-white">
-          <span>© Copyright - 2024</span>
+          <span>© Copyright - 2025</span>
         </div>
       </div>
     </section>
     <!-- Footer -->
+  </div>
   </body>
 </html>
