--- a/moviesstore/static/css/style.css
+++ b/moviesstore/static/css/style.css
@@ -1,5 +1,5 @@
 .bg-index{
-  background: url("/static/img/background.jpg") no-repeat
+  background: url("/static/img/background6.png") no-repeat
     fixed;
   background-size: 100% auto;
 }
