--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<header class="masthead bg-index text-white text-center
+<header class="masthead bg-index text-black text-center
            py-4">
   <div class="container d-flex align-items-center flex-
   column pt-2">
