--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,18 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
-<header class="masthead bg-index text-black text-center
-           py-4">
-  <div class="container d-flex align-items-center flex-
-  column pt-2">
-    <h2>Movies Store</h2>
-    <p>Your Ticket to Unlimited Entertainment!</p>
+<header class="masthead bg-index text-black text-center py-4">
+  <div class="container d-flex flex-column justify-content-center align-items-center pt-2">
+<p class="mt-3 slogan">Movies Store</p>
+<p class="mt-3 slogan">Your Ticket to Unlimited Entertainment!</p>
   </div>
 </header>
 <div class="p-3">
   <div class="container">
     <div class="row mt-3">
       <div class="col mx-auto text-center mb-3">
-        <h4>Welcome to the best movie store!!</h4>
+        <h4 class="slogan-black">Welcome to the best movie store!!</h4>
       </div>
     </div>
   </div>
