--- a/moviesstore/templates/base.html
+++ b/moviesstore/templates/base.html
@@ -30,6 +30,8 @@
                 <img src="{% static 'img/logo.png' %}" alt="logo"
                height="40" />
         </a>
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
         <button class="navbar-toggler" type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#navbarNavAltMarkup"
