--- a/moviesstore/static/css/style.css
+++ b/moviesstore/static/css/style.css
@@ -54,8 +54,7 @@ width: auto;
   font-family: 'Dancing Script', cursive;
 }
 .slogan-black {
-  font-weight: bold;
   color: black;
   font-size: 2rem;
-  font-family: 'Comfortaa', sans-serif;
+  font-family: 'Jost', sans-serif;
 }
