--- a/moviesstore/templates/base.html
+++ b/moviesstore/templates/base.html
@@ -117,16 +117,16 @@
       <div class="container d-flex
            justify-content-between">
         <div class="me-5 text-white">
-          <span>DESIGNED BY <!-- Alphabetical order -->
-            <a href="https://www.instagram.com/jhm21390/"
+<span>DESIGNED BY <!-- Alphabetical order -->
+            <a href="https://www.linkedin.com/in/hyomin-jin-180230351/"
             target="_blank">Hyomin Jin</a>,
             <a href="https://www.linkedin.com/in/jenny-huynh-5ab5b9253/"
             target="_blank">Jenny Huynh</a>,
-            <a href="https://www.x.com/danielgarax"
+            <a href="https://www.linkedin.com/in/jing-xuan-liu-b24b28248/"
             target="_blank">Jingxuan Liu</a>,
-            <a href="https://www.facebook.com/shi.jin.16144"
+            <a href="https://www.linkedin.com/in/shi-jin-151b6832b/"
             target="_blank">Shi Jin</a> &
-            <a href="https://www.x.com/greglim81"
+            <a href="https://www.linkedin.com/in/tucker-albaugh-3b322732b/"
             target="_blank">Tucker Mead Albaugh</a>
           </span>
         </div>
