--- a/moviesstore/static/css/style.css
+++ b/moviesstore/static/css/style.css
@@ -1,5 +1,5 @@
 .bg-index{
-  background: url("/static/img/background6.png") no-repeat
+  background: url("/static/img/background.jpg") no-repeat
     fixed;
   background-size: 100% auto;
 }
@@ -49,7 +49,7 @@ width: auto;
 }
 .slogan {
   color: white;
-  font-size: 2.2rem;
+  font-size: 2rem;
   font-family: 'Jost', sans-serif;
 }
 .slogan-black {
